[metadata]
name = github2pypi
version = 1.0.0
author = Kentaro Wada
author_email = www.kentaro.wada@gmail.com
url = https://github.com/wkentaro/github2pypi
description = Utils to release Python project from GitHub to PyPi.
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
# license_file = LICENSE
platform = any
keywords = "GitHub Release"
classifiers =
  Development Status :: 3 - Alpha
  Intended Audience :: Developers
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent
  Programming Language :: Python
  Programming Language :: Python :: 3.4
  Programming Language :: Python :: 3.5
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Topic :: Software Development :: Libraries :: Python Modules
project_urls = 
  Bug Tracker = https://github.com/wkentaro/github2pypi/issues

[options]
zip_safe = false
include_package_data = true
python_requires = >= 2.7, != 3.0.*, != 3.1.*, != 3.2.*
packages = github2pypi
test_suite = tests
setup_requires =
  setuptools
  # setuptools >=30.3.0     # minimal version for `setup.cfg`
  # setuptools >=38.3.0     # version with most `setup.cfg` bugfixes
  # setuptools >=46.4.0     # let's you use attr: to extract version from a module
install_requires =
tests_require =
  pytest

[options.package_data]
github2pypi = py.typed, *.pyi

[bdist_wheel]
universal = true

[sdist]
formats = zip, gztar

[flake8]
max-line-length = 79
doctests = True
exclude =  .git, .eggs, __pycache__, tests/, docs/, build/, dist/
